<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:context="itp341.luu.jonathan.a5luujonathan.DetailFragment"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="144dp"
            android:layout_gravity="center_horizontal"
            android:weightSum="1">

            <EditText
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:id="@+id/nameTF"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="90dp"
                android:layout_weight="0.48"
                android:textSize="15dp"
                android:maxLength="25" />

            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:id="@+id/pictureIV"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:minHeight="96dp"
                android:minWidth="96dp"
                android:maxHeight="96dp"
                android:maxWidth="96dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emailText"
                android:id="@+id/emailTV"
                android:layout_marginLeft="24dp"
                android:textSize="16dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/emailTF"
                android:layout_weight="1"
                android:layout_marginLeft="36dp"
                android:layout_marginRight="16dp"
                android:textSize="12dp"
                android:maxLength="30" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phoneText"
                android:id="@+id/phoneTV"
                android:textSize="16dp"
                android:layout_marginLeft="24dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/phoneTF"
                android:layout_weight="1"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="16dp"
                android:textSize="12dp"
                android:maxLength="55" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addressText"
                android:id="@+id/addressTV"
                android:textSize="16dp"
                android:layout_marginLeft="24dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addressTF"
                android:layout_weight="1"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:textSize="12dp"
                android:maxLength="55" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notesText"
            android:id="@+id/notesTV"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:textSize="16dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:id="@+id/notesTF"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="16dp"
            android:text="@string/promptText"
            android:textSize="12dp"
            android:textColor="#61ffffff"
            android:maxLength="150"
            android:gravity="top"
            android:background="#00000000"
            android:layout_marginTop="5dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editString"
                android:id="@+id/editButton"
                android:layout_weight="1"
                android:layout_marginLeft="64dp"
                android:layout_marginRight="24dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saveString"
                android:id="@+id/saveButton"
                android:layout_weight="1"
                android:layout_marginRight="64dp"
                android:layout_marginLeft="24dp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>